# SimBlock

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: testing.yml
include/: CMakeLists.txt  mainwindow.hpp
include/commands/: CMakeLists.txt  commands.hpp  node_add_connector.hpp
include/common/: CMakeLists.txt  treeitem.hpp  treemodel.hpp
include/items/: CMakeLists.txt  customitemfactory.hpp  fancywire.hpp  itemtypes.hpp  operation.hpp  operationconnector.hpp  operationconstant.hpp  operationdemo1.hpp  operationscope.hpp
include/items/blocks/: CMakeLists.txt  baseblock.hpp  baseblockconnector.hpp  blockconstant.hpp  blockderivator.hpp  blockdiv.hpp  blockgain.hpp  blockinput.hpp  blockintegrator.hpp  blockoutput.hpp  blockscope.hpp  blocksubsystem.hpp  blocksum.hpp  blocktf.hpp
include/items/blocks/properties/: CMakeLists.txt  blockpropertiesdialog.hpp  blockproperty.hpp
include/items/popup/: CMakeLists.txt  popup.hpp  popup_baseblock.hpp  popup_baseblockconnector.hpp  popup_connector.hpp  popup_operation.hpp
include/items/widgets/: CMakeLists.txt  dial.hpp  textedit.hpp
include/netlist/: CMakeLists.txt  model.hpp  view.hpp  viewer.hpp  widget.hpp
include/scope/: CMakeLists.txt  scopesignal.hpp  scopewindow.hpp
include/solver/: CMakeLists.txt  ode45solver.hpp  ode4solver.hpp  simulationworker.hpp  solver.hpp  testsolver.hpp
include/windows/: CMakeLists.txt  basewindow.hpp  mainwindow.hpp  subsystemwindow.hpp  view.hpp
resources/: CMakeLists.txt
resources/icons/: icons.qrc
src/: CMakeLists.txt  main.cpp  mainwindow.cpp
src/commands/: CMakeLists.txt  node_add_connector.cpp
src/common/: CMakeLists.txt  treeitem.cpp  treemodel.cpp
src/items/: CMakeLists.txt  customitemfactory.cpp  fancywire.cpp  operation.cpp  operationconnector.cpp  operationconstant.cpp  operationdemo1.cpp  operationscope.cpp
src/items/blocks/: CMakeLists.txt  baseblock.cpp  baseblockconnector.cpp  blockconstant.cpp  blockderivator.cpp  blockdiv.cpp  blockgain.cpp  blockinput.cpp  blockintegrator.cpp  blockoutput.cpp  blockscope.cpp  blocksubsystem.cpp  blocksum.cpp  blocktf.cpp
src/items/blocks/properties/: CMakeLists.txt  blockpropertiesdialog.cpp
src/items/popup/: CMakeLists.txt  popup.cpp
src/items/widgets/: CMakeLists.txt  dial.cpp  textedit.cpp
src/netlist/: CMakeLists.txt  model.cpp  view.cpp  viewer.cpp  widget.cpp
src/scope/: CMakeLists.txt  scopesignal.cpp  scopewindow.cpp
src/solver/: CMakeLists.txt  ode45solver.cpp  ode4solver.cpp  simulationworker.cpp  solver.cpp  testsolver.cpp
src/windows/: CMakeLists.txt  basewindow.cpp  mainwindow.cpp  subsystemwindow.cpp  view.cpp
tests/: CMakeLists.txt  test_blockintegrator.cpp  test_mainwindow.cpp  utils.hpp
