add_subdirectory(properties)

target_sources(
    ${target_library}
    PRIVATE
        baseblock.hpp
        baseblockconnector.hpp
        blockconstant.hpp
        blockderivator.hpp
        blockdiv.hpp
        blockgain.hpp
        blockinput.hpp
        blockintegrator.hpp
        blockoutput.hpp
        blockscope.hpp
        blocksubsystem.hpp
        blocksum.hpp
        blocktf.hpp
)